2017-07-14  Martin Liska  <mliska@suse.cz>

	* dbxout.c (get_lang_number): Do not handle GNU Pascal.
	* dbxout.h (extern void dbxout_stab_value_internal_label_diff):
	Remove N_SO_PASCAL.
	* dwarf2out.c (lower_bound_default): Do not handle
	DW_LANG_Pascal83.
	(gen_compile_unit_die): Likewise.
	* gcc.c: Remove default extension binding for GNU Pascal.
	* stmt.c: Remove Pascal language from a comment.
	* xcoffout.c: Likewise.

2017-07-13  David Malcolm  <dmalcolm@redhat.com>

	PR c/81405
	* diagnostic-show-locus.c (fixit_cmp): New function.
	(layout::layout): Sort m_fixit_hints.
	(column_range::column_range): Assert that the values are valid.
	(struct char_span): New struct.
	(correction::overwrite): New method.
	(struct source_line): New struct.
	(line_corrections::add_hint): Add assertions.  Reimplement memcpy
	calls in terms of classes source_line and char_span, and
	correction::overwrite.
	(selftest::test_overlapped_fixit_printing_2): New function.
	(selftest::diagnostic_show_locus_c_tests): Call it.

2017-07-13  Will Schmidt  <will_schmidt@vnet.ibm.com>

	* config/rs6000/rs6000.c (rs6000_gimple_fold_builtin): Return
	early if there is no lhs.

2017-07-13  Martin Liska  <mliska@suse.cz>

	* dwarf2out.c (gen_pointer_type_die): Remove dead code.
	(gen_reference_type_die): Likewise.
	* stor-layout.c: Remove Pascal-related comment.

2017-07-13  Martin Liska  <mliska@suse.cz>

	* opts.c (finish_options): Add quotes to error messages.
	(parse_sanitizer_options): Likewise.

2017-07-13  Thomas Preud'homme  <thomas.preudhomme@arm.com>

	* doc/invoke.texi (armv8-r): Document +fp.sp ARMv8-R extension.

2017-07-13  Richard Earnshaw  <rearnsha@arm.com>

	* config/arm/vxworks.h (TARGET_ENDIAN_DEFAULT): Define.

2017-07-13  Maxim Ostapenko  <m.ostapenko@samsung.com>

	* asan.c (asan_emit_allocas_unpoison): Use ptr_mode for arguments
	during expansion.
	* builtins.c (expand_asan_emit_allocas_unpoison): Likewise.

2017-07-12  Michael Meissner  <meissner@linux.vnet.ibm.com>
